RESOLVED FIXED279795
Fix miscellaneous unexpected smart pointer warnings
https://bugs.webkit.org/show_bug.cgi?id=279795
Summary Fix miscellaneous unexpected smart pointer warnings
Ryosuke Niwa
Reported 2024-09-16 17:00:55 PDT
Address unexpected smart pointer warnings or update expected results.
Attachments
Ryosuke Niwa
Comment 1 2024-09-16 17:47:12 PDT
EWS
Comment 2 2024-09-16 23:05:59 PDT
Committed 283749@main (b062fe25ac4a): <https://commits.webkit.org/283749@main> Reviewed commits have been landed. Closing PR #33736 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-09-16 23:06:15 PDT
Note You need to log in before you can comment on or make changes to this bug.