Fix miscellaneous unexpected smart pointer warnings https://bugs.webkit.org/show_bug.cgi?id=279795

Reviewed by Chris Dumez and Basuke Suzuki.

Address most of unexpected smart pointer warnings, and suppress one of the warnings
since making ScrollingTree support ThreadSafeWeakPtr will be a bigger change.

* Source/WebCore/SmartPointerExpectations/NoUncountedMemberCheckerExpectations:
* Source/WebCore/animation/CSSNumberishTime.cpp:
(WebCore::CSSNumberishTime::CSSNumberishTime):
* Source/WebCore/animation/ScrollTimeline.cpp:
(WebCore::ScrollTimeline::controller const):
* Source/WebCore/animation/ViewTimeline.cpp:
(WebCore::ViewTimeline::controller const):
* Source/WebCore/css/CSSFontVariationValue.cpp:
(WebCore::CSSFontVariationValue::protectedValue const):
(WebCore::CSSFontVariationValue::customCSSText const):
* Source/WebCore/css/CSSFontVariationValue.h:
* Source/WebCore/css/parser/CSSPropertyParserConsumer+UnevaluatedCalc.h:
(WebCore::UnevaluatedCalc::protectedCalc const):
* Source/WebCore/html/HTMLFrameOwnerElement.cpp:
(WebCore::HTMLFrameOwnerElement::setSandboxFlags):
* Source/WebCore/platform/graphics/filters/software/FECompositeSoftwareApplier.cpp:
(WebCore::FECompositeSoftwareApplier::apply const):
* Source/WebCore/platform/graphics/filters/software/FELightingSoftwareApplier.cpp:
(WebCore::FELightingSoftwareApplier::apply const):
* Source/WebCore/platform/graphics/filters/software/SourceGraphicSoftwareApplier.cpp:
(WebCore::SourceGraphicSoftwareApplier::apply const):
* Source/WebCore/style/StyleResolveForFontRaw.cpp:
(WebCore::Style::resolveForUnresolvedFont):
* Source/WebKit/Shared/graphics/ImageBufferSet.cpp:
(WebKit::ImageBufferSet::swapBuffersForDisplay):
(WebKit::ImageBufferSet::prepareBufferForDisplay):
* Source/WebKit/WebProcess/WebPage/RemoteLayerTree/PlatformCALayerRemoteModelHosting.h:
* Source/WebKit/WebProcess/WebPage/RemoteLayerTree/PlatformCALayerRemoteModelHosting.mm:
(WebKit::PlatformCALayerRemoteModelHosting::dumpAdditionalProperties):

Canonical link: https://commits.webkit.org/283749@main