Source/WebCore/animation/ScrollTimeline.cpp
@@ -31,6 +31,7 @@
 #include "CSSScrollValue.h"
 #include "CSSValuePool.h"
 #include "Document.h"
+#include "DocumentInlines.h"
 #include "Element.h"
 
 namespace WebCore {
@@ -128,7 +129,7 @@ Ref<CSSValue> ScrollTimeline::toCSSValue(const RenderStyle&) const
 AnimationTimelinesController* ScrollTimeline::controller() const
 {
     if (m_source)
-        return &m_source->document().ensureTimelinesController();
+        return &m_source->protectedDocument()->ensureTimelinesController();
     return nullptr;
 }
 
