Source/WebCore/animation/ViewTimeline.cpp
@@ -34,6 +34,7 @@
 #include "CSSValuePool.h"
 #include "CSSViewValue.h"
 #include "Document.h"
+#include "DocumentInlines.h"
 #include "Element.h"
 #include "StyleBuilderConverter.h"
 
@@ -128,7 +129,7 @@ Ref<CSSValue> ViewTimeline::toCSSValue(const RenderStyle& style) const
 AnimationTimelinesController* ViewTimeline::controller() const
 {
     if (m_subject)
-        return &m_subject->document().ensureTimelinesController();
+        return &m_subject->protectedDocument()->ensureTimelinesController();
     return nullptr;
 }
 
