Source/WebKit/Shared/graphics/ImageBufferSet.cpp
@@ -55,14 +55,15 @@ SwapBuffersDisplayRequirement ImageBufferSet::swapBuffersForDisplay(bool hasEmpt
     if (!supportsPartialRepaint)
         displayRequirement = SwapBuffersDisplayRequirement::NeedsFullDisplay;
 
-    if (!m_backBuffer || m_backBuffer->isInUse()) {
+    RefPtr backBuffer = m_backBuffer;
+    if (!backBuffer || backBuffer->isInUse()) {
         m_previouslyPaintedRect = std::nullopt;
         std::swap(m_backBuffer, m_secondaryBackBuffer);
 
         // When pulling the secondary back buffer out of hibernation (to become
         // the new front buffer), if it is somehow still in use (e.g. we got
         // three swaps ahead of the render server), just give up and discard it.
-        if (m_backBuffer && m_backBuffer->isInUse())
+        if (backBuffer && backBuffer->isInUse())
             m_backBuffer = nullptr;
     }
 
@@ -107,18 +108,19 @@ void ImageBufferSet::prepareBufferForDisplay(const FloatRect& layerBounds, const
         return;
     }
 
-    GraphicsContext& context = m_frontBuffer->context();
+    RefPtr frontBuffer = m_frontBuffer;
+    GraphicsContext& context = frontBuffer->context();
     context.resetClip();
 
     WebCore::FloatRect copyRect;
-    if (m_backBuffer) {
+    if (RefPtr backBuffer = m_backBuffer) {
         WebCore::IntRect enclosingCopyRect { m_previouslyPaintedRect ? *m_previouslyPaintedRect : enclosingIntRect(layerBounds) };
         if (!dirtyRegion.contains(enclosingCopyRect)) {
             WebCore::Region copyRegion(enclosingCopyRect);
             copyRegion.subtract(dirtyRegion);
             copyRect = intersection(copyRegion.bounds(), layerBounds);
             if (!copyRect.isEmpty())
-                m_frontBuffer->context().drawImageBuffer(*m_backBuffer, copyRect, copyRect, { WebCore::CompositeOperator::Copy });
+                frontBuffer->context().drawImageBuffer(*backBuffer, copyRect, copyRect, { WebCore::CompositeOperator::Copy });
         }
     }
 
